--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,50 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         
+        {
+            "name": "dataset_states_to_obs_parallel random",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "robomimic/scripts/dataset_states_to_obs_parallel.py",
+            "console": "integratedTerminal",
+            "args": ["--dataset=/home/yilong/Documents/ae_data/random_processing/raw/random2.hdf5", 
+            "--output_name=/home/yilong/Documents/ae_data/random_processing/obs_rel/random2_vox.hdf5",
+            "--store_voxel"]
+        },
+
+        {
+            "name": "dataset_states_to_obs_parallel square",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "robomimic/scripts/dataset_states_to_obs_parallel.py",
+            "console": "integratedTerminal",
+            "args": ["--dataset=/home/yilong/Documents/ae_data/datasets/mimicgen_core/square_raw/square_d2.hdf5", 
+            "--output_name=/home/yilong/Documents/ae_data/datasets/mimicgen_core/square_rel/square_d2_rel.hdf5",
+            "--store_voxel"]
+        },
+
+        {
+            "name": "dataset_states_to_obs_parallel three_piece_assembly",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "robomimic/scripts/dataset_states_to_obs.py",
+            "console": "integratedTerminal",
+            "args": ["--dataset=/home/yilong/Documents/ae_data/random_processing/raw/three_piece_assembly_d0.hdf5", 
+            "--output_name=//home/yilong/Documents/ae_data/random_processing/obs_rel/three_piece_assembly_d0_vox.hdf5",
+            "--store_voxel"]
+        },
+
         {
             "name": "dataset_states_to_obs",
             "type": "debugpy",
             "request": "launch",
             "program": "robomimic/scripts/dataset_states_to_obs.py",
             "console": "integratedTerminal",
-            "args": ["--dataset=/home/yilong/Documents/mimicgen_envs/datasets/core/square_d0.hdf5", "--output_name=/home/yilong/Documents/mimicgen_envs/datasets/core/data.hdf5"]
+            "args": ["--dataset=/home/yilong/Documents/ae_data/random_processing/raw/random2.hdf5", 
+            "--output_name=/home/yilong/Documents/ae_data/random_processing/obs_rel/random2_vox.hdf5",
+            "--store_voxel"]
         },
     ]
 }
